<resources>
    <string name="app_name">CineFilmz</string>
    <string name="prime">DT prime</string>
    <string name="razorpayAPIKey" translatable="false">rzp_test_E7TfP2p9bA9q75</string>
    <string name="facebook_app_id" translatable="false">98369</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb98369</string>
    <string name="facebook_client_token" translatable="false">21c5df3</string>
    <string name="web_client_id" translatable="false">1093417218492-rlk4t23uo8533gpilp5gri7tqu3b8rc9.apps.googleusercontent.com</string>
    <string name="Secrate" translatable="false">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</string>
    <string name="youtube_api_key" translatable="false">AIzaSyBt2kWDmwyn</string>
    <string name="error_player" translatable="false">There was an error initializing the YouTubePlayer.</string>
    <string name="loading_video" translatable="false">Loading video...</string>
    <string name="invalid_youtube_url" translatable="false">Youtube video link is not valid.</string>
    <string name="msg_for_checkbox" translatable="false">Before continue to this app, please accept these policies.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started!</string>
    <string name="welcome_slides">Home Screen</string>
    <string name="welcome_1_Title">Watch Movies, Shows, Kids show &amp; much more.</string>
    <string name="welcome_1_Desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="welcome_2_Title">Explore Thousands of Videos on CineFilmz.</string>
    <string name="welcome_2_Desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="welcome_3_Title">Find World news on CineFilmz.</string>
    <string name="welcome_3_Desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="welcome_4_Title">Upgrade to get more out of your subscription.</string>
    <string name="welcome_4_Desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="Lorem_Ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry standard dummy text ever since the 1500s.
        Lorem Ipsum has been the industry standard dummy text ever since the 1500s.
        Lorem Ipsum has been the industry standard dummy text ever since the 1500s.
        Lorem Ipsum has been the industry standard dummy text ever since the 1500s.
        Lorem Ipsum has been the industry standard dummy text ever since the 1500s.</string>
    <string name="LoremIpsum_less">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard text.</string>
    <string name="sorry_not_connected_to_internet">Sorry! Not connected to internet.</string>
    <string name="back_to_online">Back to online.</string>
    <string name="permission_desc">Now we need your permission to continue use the application perfectly</string>
    <string name="permission_title">Everything is okay.</string>
    <string name="isRTL" translatable="false">true</string>
    <string name="okay">Okay!</string>
    <string name="internet_error">Network connection error!!!</string>
    <string name="permission_necessary">Permission Necessary</string>
    <string name="storage_permission_is_necessary_to_wrote_event">Storage permission is necessary to read and write event</string>
    <string name="settings">Settings</string>
    <string name="cancel_">Cancel</string>
    <string name="permission">Permission</string>
    <string name="permission_alert">Permission Alert</string>
    <string name="get_permission_for_brightness_manage_desc">We need permission to change brightness and you can manage brightness while playing video. \n Thanks.</string>
    <string name="we_need_storage_permission_for_save_video">We need storage permission for save media file into external storage.</string>
    <string name="we_need_storage_and_camera_permission_for_upload_profile_pic">We need external storage and camera permission for upload profile picture.</string>
    <string name="yesterday">yesterday</string>
    <string name="day_ago">day ago</string>
    <string name="please_wait">please wait...</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="downloading">Downloading...</string>
    <string name="loading">Loading...</string>
    <string name="do_you_want_to_exit">Do you want to exit ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="track_selection_title">Change Track</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="login_with_mobile_note">Enter your mobile number to login</string>
    <string name="enter_your_mobile_number">Enter Your mobile number</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_otp">Enter received OTP.</string>
    <string name="enter_your_mobile_no">Enter Your Mobile number</string>
    <string name="enter_coutry_code">Enter your country code.</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="code_expire_soon">Code expire soon</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="select_your_coutry_code">Select your country code.</string>
    <string name="you_will_receive_a_6_digit_code_to_verify_next">You will receive a 6 digit code to \n verify next.</string>
    <string name="send_otp">SEND OTP</string>
    <string name="enter_otp_code_to_sent_to_mobile_no">Enter OTP code to send to Mobile number.</string>
    <string name="we_have_sent_code_to_your_number">We have sent code to your number</string>
    <string name="verify_and_proceed">VERIFY &amp; PROCEED</string>
    <string name="send_">SEND</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="do_not_have_an_account">Don\'t have an Account ?</string>
    <string name="or_Login_using_Social_Media">Or Login using Social Media</string>
    <string name="title_home">Home</string>
    <string name="title_tvshows">TV Shows</string>
    <string name="title_movies">Movies</string>
    <string name="title_kids">Kids</string>
    <string name="title_channels">Channels</string>
    <string name="title_find">Find</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_store">Store</string>
    <string name="title_mystuff">My Stuff</string>
    <string name="title_settings">Settings</string>
    <string name="continue_watching">Continue watching</string>
    <string name="top_movies">Top movies</string>
    <string name="new_movie_tag">NEW MOVIE</string>
    <string name="new_series_tag">NEW SERIES</string>
    <string name="new_tvshow_tag">NEW TVSHOW</string>
    <string name="tvshow">TV shows</string>
    <string name="shows">Shows</string>
    <string name="_shows">shows</string>
    <string name="movies">movies</string>
    <string name="movies_">Movies</string>
    <string name="tv">TV</string>
    <string name="watch_now">Watch Now</string>
    <string name="watch_episode">Watch Episode</string>
    <string name="no_episode">Sorry! episode not available to play.</string>
    <string name="no_video">Sorry! video not available to play.</string>
    <string name="no_trailer">Sorry! trailer not available to play.</string>
    <string name="no_data">Sorry! data not found.</string>
    <string name="related">Related</string>
    <string name="seasons">Seasons</string>
    <string name="episodes">Episodes</string>
    <string name="more_details">More details</string>
    <string name="customers_also_watched">Customers also watched</string>
    <string name="cast_and_crew">Cast &amp; Crew</string>
    <string name="details_from">Details from</string>
    <string name="genres">Genres</string>
    <string name="directors">Directors</string>
    <string name="starring">Starring</string>
    <string name="studios">Studios</string>
    <string name="maturity_rating">Maturity rating</string>
    <string name="content_advisory">Content advisory</string>
    <string name="customer_reviews">Customer reviews</string>
    <string name="did_you_know">Did you know?</string>
    <string name="known_for">Known for:</string>
    <string name="included_with">included with subscription</string>
    <string name="available_to_rent">Available to rent</string>
    <string name="release_date">Release Date</string>
    <string name="rent">Rent</string>
    <string name="language_change_note">Language can be changed while the video is playing.</string>
    <string name="available_languages">Available languages</string>
    <string name="audio">Audio</string>
    <string name="subtitles">Subtitles</string>
    <string name="trailer">Trailer</string>
    <string name="share">Share</string>
    <string name="watch_party">Watch Party</string>
    <string name="watchlist">Watchlist</string>
    <string name="download">Download</string>
    <string name="season">Season</string>
    <string name="create_watch_party">Create Watch Party</string>
    <string name="watch_party_note">Chat while watching movies and TV with others.</string>
    <string name="create">Create</string>
    <string name="chat_as">Chat as:</string>
    <string name="watch_party_tips">Watch Party tips</string>
    <string name="enter_name">Enter name</string>
    <string name="more">More +</string>
    <string name="less">Less -</string>
    <string name="resume">Resume</string>
    <string name="trivia">Trivia</string>
    <string name="filter">Filter</string>
    <string name="videos">videos</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="remove_from_watchlist">Remove from Watchlist</string>
    <string name="complete">Complete</string>
    <string name="delete_download">Delete download</string>
    <string name="more_">More</string>
    <string name="view_details">View details</string>
    <string name="hide_this_video">Hide this video</string>
    <string name="unhide_this_video">Unhide this video?</string>
    <string name="unhide_video_note">Unhiding this video allows it to appear while you\'re browsing for something to watch. Hidden videos can be played and viewed from Find.</string>
    <string name="instagram_stories">Instagram stories</string>
    <string name="copy_link">Copy link</string>
    <string name="sms">SMS</string>
    <string name="confirm_delete_account">Confirm Delete Account</string>
    <string name="delete_account_msg">Are you sure want to Delete Account ?</string>
    <string name="change_language_mark">Change language?</string>
    <string name="change_language_note">Clicking Yes will restart the app in the selected language.\nDo you want to continue?</string>
    <string name="take_photo">Take photo.</string>
    <string name="choose_from_gallery">Choose from gallery.</string>
    <string name="add_photo">Add photo!</string>
    <string name="choose_an_avatar">Choose an Avatar.</string>
    <string name="choose_new_avatar_note">Select any option to choose your new avatar.</string>
</resources>