<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin23"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_bold"
                android:text="@string/add_photo"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/public_medium"
                android:lineSpacingExtra="5dp"
                android:text="@string/choose_new_avatar_note"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_13" />

            <!-- Using Camera -->
            <LinearLayout
                android:id="@+id/lyByCamera"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialogButtonHeight"
                android:layout_marginTop="@dimen/mainMarginTop"
                android:background="@drawable/round_bg_with_bor"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/margin10"
                android:theme="@style/AppTheme.detailPageRipple">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:fontFamily="@font/public_medium"
                    android:gravity="center"
                    android:text="@string/take_photo"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/text_16" />

            </LinearLayout>

            <!-- Using Gallery -->
            <LinearLayout
                android:id="@+id/lyByGallery"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialogButtonHeight"
                android:layout_marginTop="@dimen/margin10"
                android:background="@drawable/round_bg_with_bor"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/margin10"
                android:theme="@style/AppTheme.detailPageRipple">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:fontFamily="@font/public_medium"
                    android:gravity="center"
                    android:text="@string/choose_from_gallery"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/text_16" />

            </LinearLayout>

            <!-- Using Avatar -->
            <LinearLayout
                android:id="@+id/lyByAvatar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialogButtonHeight"
                android:layout_marginTop="@dimen/margin10"
                android:background="@drawable/round_bg_with_bor"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/margin10"
                android:theme="@style/AppTheme.detailPageRipple">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:fontFamily="@font/public_medium"
                    android:gravity="center"
                    android:text="@string/choose_an_avatar"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/text_16" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialogButtonHeight"
                android:layout_marginTop="@dimen/margin20"
                android:gravity="center|end"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lyClickNegative"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_bg_with_bor2"
                    android:clickable="true"
                    android:gravity="center"
                    android:minWidth="75dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/margin10"
                    android:theme="@style/AppTheme.detailPageRipple">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:fontFamily="@font/public_medium"
                        android:gravity="center"
                        android:text="@string/cancel_"
                        android:textColor="@color/text_white"
                        android:textSize="@dimen/text_16" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>